# wisielec_programowanie_1

./: .gitignore  CMakeLists.txt  README.md  categories_logic.cpp  categories_logic.h  display.cpp  display.h  fileOperations.cpp  fileOperations.h  game_logic.cpp  game_logic.h  main.cpp  models.h  settings.cpp  settings.h
